tests/NormalTests/paczka1/fuzzy1/85657613.err
Error in line 2: A167 S516 29,3
Error in line 5: 247lxHF5uMz S756 82,4
Error in line 9: pELWO A582 32,1
Error in line 17: lfSxF4AFgE A582 22,6
Error in line 18: lfSxF4AFgE A167 81,1
Error in line 19: lfSxF4AFgE S756 73,6
Error in line 27: 247lxHF5uMz A167 1,64
Error in line 29: H71lPg77F A582 8,8
Error in line 14: pELWO S516 68,8
Error in line 31: 247lxHF5uMz A167 0,8
Error in line 25: A167 S756 148,8
